--- a/Index.html
+++ b/Index.html
@@ -15,5 +15,7 @@
     <div class="container"></div>
         <h1>Feel the Shapes</h1>
     <script src="main.js"></script>
+    <div class="container"></div>
+    <h1>Feel the Shapes</h1>
 </body>
 </html>
